# JsonSQL

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/jsonsql/: __init__.py  jsonsql.py
tests/: jsonsqltest.py  test.py  test_full.py  test_joins.py  test_logic.py  test_wildcards_blacklists.py
