[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "JsonSQL2"
version = "1.0.0"
authors = [
  { name="yashimself", email="" },
]
description = "A Python library for safe SQL query execution from JSON input with built-in validation and sanitization"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yashimself/JsonSQL"
Issues = "https://github.com/yashimself/JsonSQL/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/jsonsql"]